Fix horizontal scroll

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ header {
 }
 
 #home {
-    width: 100vw;
+    width: 100%;
 }
 
 #monster {
